Add TLS support to API service layer

--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -36,7 +36,7 @@ spec:
       - image: {{ .Values.imageCredentials.registry }}/services:{{ default .Values.thorasVersion .Values.thorasApiServerV2.imageTag }}
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         name: thoras-v2-api-server
-        command: ["/app/api-server", "-p", {{ .Values.thorasApiServerV2.containerPort | quote }}]
+        command: ["/app/api-server", "-p", {{ .Values.thorasApiServerV2.containerPort | quote }}, "--certificate-file", "/app/cert.pem", "--key-file", "/app/key.pem"]
         env:
           - name: "ELASTICSEARCH_URL"
             valueFrom:
@@ -54,11 +54,11 @@ spec:
             value: {{ default .Values.logLevel .Values.thorasApiServerV2.logLevel }}
         volumeMounts:
           - name: tls
-            mountPath: /apps/packages/thoras-external-metrics-server/cert.pem
+            mountPath: /app/cert.pem
             subPath: tls.crt
             readOnly: true
           - name: tls
-            mountPath: /apps/packages/thoras-external-metrics-server/key.pem
+            mountPath: /app/key.pem
             subPath: tls.key
             readOnly: true
         ports:
