Allow optionally specifying forecast requests

--- a/charts/thoras/templates/dashboard/deployment.yaml
+++ b/charts/thoras/templates/dashboard/deployment.yaml
@@ -46,6 +46,10 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          {{- if .Values.thorasForecast.requestCpu }}
+          - name: "FORECAST_RESOURCE_REQUESTS_CPU"
+            value: {{ .Values.thorasForecast.requestCpu | quote }}
+          {{- end }}
           - name: "MODEL_IMAGE"
             value: {{ .Values.imageCredentials.registry }}/thoras-forecast:{{ default .Values.thorasVersion .Values.thorasForecast.imageTag }}
           - name: SLACK_WEBHOOK_URL
