Added FORECAST_IMAGE_PULL_POLICY env var to operator and dashboard

--- a/charts/thoras/templates/dashboard/deployment.yaml
+++ b/charts/thoras/templates/dashboard/deployment.yaml
@@ -63,6 +63,8 @@ spec:
             value: "http://thoras-api-server-v2"
           - name: "LOGLEVEL"
             value: {{ default .Values.logLevel .Values.thorasDashboard.logLevel }}
+          - name: FORECAST_IMAGE_PULL_POLICY
+            value: "{{ .Values.imagePullPolicy }}"
         resources:
           limits:
             memory: {{ .Values.thorasDashboard.limits.memory }}
