--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -105,6 +105,8 @@ spec:
                         - type: integer
                         - type: string
                       x-kubernetes-int-or-string: true
+                    forecast_buffer_percentage:
+                      x-kubernetes-int-or-string: true
             status:
               type: object
               properties:
