--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -45,14 +45,14 @@ spec:
               secretKeyRef:
                 name: thoras-elastic-password
                 key: host
-          - name: SLACK_WEBHOOK_URL
+          - name: SERVICE_SLACK_WEBHOOK_URL
             valueFrom:
               secretKeyRef:
                 name: thoras-slack
                 key: webhookUrl
-          - name: SLACK_ERRORS_ENABLED
+          - name: SERVICE_SLACK_ERRORS_ENABLED
             value: "{{ .Values.thorasApiServerV2.slackErrorsEnabled | default .Values.slackErrorsEnabled }}"
-          - name: "LOGLEVEL"
+          - name: "SERVICE_LOGLEVEL"
             value: {{ default .Values.logLevel .Values.thorasApiServerV2.logLevel }}
         volumeMounts:
           - name: tls
