--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -274,7 +274,28 @@ spec:
                       x-kubernetes-int-or-string: true
                     forecast_buffer_percentage:
                       x-kubernetes-int-or-string: true
-
+                reasoning:
+                  type: object
+                  required:
+                    - metrics
+                  properties:
+                    metrics:
+                      type: array
+                      items:
+                        type: object
+                        required:
+                            - type
+                            - name
+                            - query
+                        properties:
+                          type:
+                            type: string
+                            pattern: ^(prom)$
+                          name:
+                            type: string
+                            pattern: ^[a-zA-Z0-9_-]+$
+                          query:
+                            type: string
             status:
               type: object
               properties:
