--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -89,6 +89,167 @@ spec:
                                 x-kubernetes-int-or-string: true
                         required:
                           - name
+
+
+
+                scale_metrics:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      type:
+                        type: string
+                        pattern: '^(Object|Resource|Pods|External)$'
+                      object:
+                        type: object
+                        required:
+                          - metric
+                          - describedObject
+                          - target
+                        properties:
+                          metric:
+                            type: object
+                            required:
+                              - name
+                            properties:
+                              name:
+                                type: string
+                              selector:
+                                type: string
+                          describedObject:
+                            type: object
+                            required:
+                              - kind
+                              - name
+                            properties:
+                              apiVersion:
+                                type: string
+                              kind:
+                                type: string
+                              name:
+                                type: string
+                          target:
+                            type: object
+                            required:
+                              - type
+                            properties:
+                              type:
+                                type: string
+                                pattern: '^(Utilization|Value|AverageValue)$'
+                              averageUtilization:
+                                anyOf:
+                                  - type: integer
+                                  - type: string
+                                x-kubernetes-int-or-string: true
+                              averageValue:
+                                anyOf:
+                                  - type: integer
+                                  - type: string
+                                x-kubernetes-int-or-string: true
+                              value:
+                                anyOf:
+                                  - type: integer
+                                  - type: string
+                                x-kubernetes-int-or-string: true
+                      pods:
+                        type: object
+                        required:
+                          - metric
+                          - describedObject
+                          - target
+                        properties:
+                          metric:
+                            type: object
+                            required:
+                              - name
+                            properties:
+                              name:
+                                type: string
+                              selector:
+                                type: string
+                          describedObject:
+                            type: object
+                            required:
+                              - kind
+                              - name
+                            properties:
+                              apiVersion:
+                                type: string
+                              kind:
+                                type: string
+                              name:
+                                type: string
+                              namespace:
+                                type: string
+                          target:
+                            type: object
+                            required:
+                              - type
+                            properties:
+                              type:
+                                type: string
+                                pattern: '^(Utilization|Value|AverageValue)$'
+                              averageUtilization:
+                                anyOf:
+                                  - type: integer
+                                  - type: string
+                                x-kubernetes-int-or-string: true
+                              averageValue:
+                                anyOf:
+                                  - type: integer
+                                  - type: string
+                                x-kubernetes-int-or-string: true
+                              value:
+                                anyOf:
+                                  - type: integer
+                                  - type: string
+                                x-kubernetes-int-or-string: true
+                      resource:
+                        type: object
+                        properties:
+                          name:
+                            type: string
+                          target:
+                            type: object
+                            required:
+                              - type
+                            properties:
+                              type:
+                                type: string
+                              averageUtilization:
+                                anyOf:
+                                - type: integer
+                                - type: string
+                                x-kubernetes-int-or-string: true
+                              averageValue:
+                                anyOf:
+                                - type: integer
+                                - type: string
+                                x-kubernetes-int-or-string: true
+                      external:
+                        type: object
+                        required:
+                          - metric
+                          - target
+                        properties:
+                          metric:
+                            type: object
+                            properties:
+                              name:
+                                type: string
+                              selector:
+                                type: object
+                                properties:
+                                  matchLabels:
+                                    type: object
+                                    additionalProperties:
+                                      type: string
+                          target:
+                            type: object
+                            properties:
+                              type:
+
+
                 model:
                   type: object
                   required:
@@ -107,6 +268,7 @@ spec:
                       x-kubernetes-int-or-string: true
                     forecast_buffer_percentage:
                       x-kubernetes-int-or-string: true
+
             status:
               type: object
               properties:
