--- a/charts/thoras/templates/monitor/secret.yaml
+++ b/charts/thoras/templates/monitor/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.slackWebhookUrl }}
 ---
 apiVersion: v1
 data:
@@ -5,3 +6,4 @@ data:
 kind: Secret
 metadata:
   name: thoras-slack
+{{- end }}
