--- a/charts/thoras/templates/registry-secret.yaml
+++ b/charts/thoras/templates/registry-secret.yaml
@@ -1,5 +1,4 @@
-{{- /* The following line is a hack that enforces a required .Values.imageCredentials */}}
-{{- $_ := .Values.imageCredentials.password | required ".Values.imageCredentials.password is required." -}}
+{{- if .Values.imageCredentials.password }}
 ---
 apiVersion: v1
 kind: Secret
@@ -14,3 +13,4 @@ metadata:
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "imagePullSecret" . }}
+{{- end }}
