--- a/charts/thoras/templates/registry-secret.yaml
+++ b/charts/thoras/templates/registry-secret.yaml
@@ -1,3 +1,6 @@
+{{- if and .Values.imageCredentials.password .Values.imageCredentials.secretRef }}
+{{- fail "Error: Both '.Values.imageCredentials.password' and '.Values.imageCredentials.secretRef' are set, but only one should be defined" }}
+{{- end }}
 {{- if .Values.imageCredentials.password }}
 ---
 apiVersion: v1
