--- a/charts/thoras/tests/secrets_test.yaml
+++ b/charts/thoras/tests/secrets_test.yaml
@@ -34,27 +34,53 @@ tests:
         secretRef: "frou-frou"
     documentIndex: 0
     asserts:
-      - matchRegex:
+      - equal:
           path: imagePullSecrets[0].name
-          pattern: "frou-frou"
+          value: "frou-frou"
 
+# Collector has its own tests for this
+  - it: Points all apps to existing slack secret, if provided
+    templates:
+      - api-server/deployment.yaml
+      - api-server-v2/deployment.yaml
+      - dashboard/deployment.yaml
+      - monitor/deployment.yaml
+      - operator/deployment.yaml
+      - reasoning-api/deployment.yaml
+    set:
+      slackWebhookUrlSecretRefName: "frou-frou"
+      slackWebhookUrlSecretRefKey: "url"
+      thorasMonitor:
+        enabled: true
+      thorasReasoningApi:
+        enabled: true
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.name
+          value: "frou-frou"
+      - equal:
+          path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.key
+          value: "url"
 
+  - it: Points all apps to default slack secret, if no existing secret provided provided
+    templates:
+      - api-server/deployment.yaml
+      - api-server-v2/deployment.yaml
+      # - collector/deployment.yaml
+      - dashboard/deployment.yaml
+      - monitor/deployment.yaml
+      - operator/deployment.yaml
+      - reasoning-api/deployment.yaml
+    set:
+      thorasMonitor:
+        enabled: true
+      thorasReasoningApi:
+        enabled: true
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.name
+          value: "thoras-slack"
+      - equal:
+          path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.key
+          value: "webhookUrl"
 
-      # - matchRegex:
-      #     path: spec.template.spec.containers[0].image
-      #     pattern: ^us-east4-docker\.pkg\.dev\/thoras-registry\/platform\/.*$
-  # - it: Should have helm recommended labels
-  #   template: monitor/deployment.yaml
-  #   asserts:
-  #     - equal:
-  #         path: metadata.labels["app.kubernetes.io/name"]
-  #         value: thoras
-  #     - matchRegex:
-  #         path: metadata.labels["helm.sh/chart"]
-  #         pattern: ^thoras-\d\.\d\.\d$
-  #     - equal:
-  #         path: metadata.labels["app.kubernetes.io/managed-by"]
-  #         value: Helm
-  #     - equal:
-  #         path: metadata.labels["app.kubernetes.io/instance"]
-  #         value: RELEASE-NAME
